adding index file
adding icons for the 3 links in the contacts section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
 
         <nav class="contacts" aria-label="Contact links">
-          <a href="mailto:darmia@illinoistech.edu">Email</a>
-          <a href="https://github.com/darmia05" target="_blank" rel="noopener noreferrer">GitHub</a>
-          <a href="https://www.linkedin.com/in/dannyarmia" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+          <a href="mailto:darmia@illinoistech.edu"> Email <img src="images/emaillogo.jpg" alt="Email icon" class="icon"></a>
+          <a href="https://github.com/darmia05" target="_blank" rel="noopener noreferrer"> GitHub <img src="images/githublogo.png" alt="GitHub icon" class="icon"></a>
+          <a href="https://www.linkedin.com/in/dannyarmia" target="_blank" rel="noopener noreferrer"> LinkedIn <img src="images/linkedinlogo.png" alt="LinkedIn icon" class="icon"></a>
         </nav>
       </div>
     </header>
@@ -37,7 +37,11 @@
       <aside class="sidebar" aria-label="Sidebar with education and skills">
         <section aria-labelledby="education-title">
           <h2 id="education-title" class="section-title">Education</h2>
-          <p><strong>BS — Information Technology &amp; Management</strong><br>Illinois Institute of Technology<br>Expected graduation: May 2027</p>
+          <p>
+            <strong>BS — Information Technology &amp; Management</strong><br>
+            Illinois Institute of Technology<br>
+            Expected graduation: May 2027
+          </p>
         </section>
         
         <section aria-labelledby="skills-title" class="skills">
